bug: Fix line-wrap in button group at grid breakpoint

--- a/style.css
+++ b/style.css
@@ -77,6 +77,8 @@ body {
 }
 #nmvListHead {
     border-radius: 18px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 #nmvListHeaderRow {
     background-color: #054f25;
